# goldsrc-textures

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  resource.h  resource.rc
include/: noc_file_dialog.h
include/GL/: glextl.h
include/glad/: glad.h
src/: bspfile.cpp  bspfile.h  bsptexture.cpp  bsptexture.h  glad.c  main.cpp  noc_file_dialog.cpp  program-about.cpp  program-menu.cpp  program-texturebrowser.cpp  program.cpp  program.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h  wadfile.cpp  wadtexture.cpp  wadtexture.h
